{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 620,
  "lineage": "22fee922-b846-fd4b-2965-54726ee56f22",
  "resources": [
    {
      "module": "module.vpc-irland",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Ireland",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:863435570010:internet-gateway/igw-0b1796e163d2251d7",
            "id": "igw-0b1796e163d2251d7",
            "owner_id": "863435570010",
            "vpc_id": "vpc-099be8c76f470f90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-irland.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-irland",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Ireland",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:863435570010:route-table/rtb-0f3a8278ca57fd680",
            "id": "rtb-0f3a8278ca57fd680",
            "owner_id": "863435570010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1796e163d2251d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-099be8c76f470f90d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-irland.aws_internet_gateway.main",
            "module.vpc-irland.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-irland",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Ireland",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cc73b7657a8044d",
            "route_table_id": "rtb-0f3a8278ca57fd680",
            "subnet_id": "subnet-04b42d71525d383e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-irland.aws_internet_gateway.main",
            "module.vpc-irland.aws_route_table.public",
            "module.vpc-irland.aws_subnet.public_one",
            "module.vpc-irland.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-irland",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Ireland",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:863435570010:security-group/sg-045063de3730da604",
            "description": "Allow outbound HTTPS for SNS and ECR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Required to talk to SNS, ECR, and CloudWatch",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-045063de3730da604",
            "ingress": [],
            "name": "ecs-task-sg",
            "name_prefix": "",
            "owner_id": "863435570010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-publisher-sg"
            },
            "tags_all": {
              "Name": "ecs-publisher-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099be8c76f470f90d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-irland.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-irland",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Ireland",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:863435570010:subnet/subnet-04b42d71525d383e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b42d71525d383e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863435570010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-099be8c76f470f90d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-irland.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-irland",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Ireland",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:863435570010:vpc/vpc-099be8c76f470f90d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0afbc3b51edea14d4",
            "default_route_table_id": "rtb-0bd6233dad68c4d55",
            "default_security_group_id": "sg-0d062abb7f974dca7",
            "dhcp_options_id": "dopt-001b05d73014e4cf3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099be8c76f470f90d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd6233dad68c4d55",
            "owner_id": "863435570010",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863435570010:internet-gateway/igw-04f222abade610bdb",
            "id": "igw-04f222abade610bdb",
            "owner_id": "863435570010",
            "vpc_id": "vpc-0272354811acc4233"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-us.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863435570010:route-table/rtb-027ec6bc68a63ca51",
            "id": "rtb-027ec6bc68a63ca51",
            "owner_id": "863435570010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f222abade610bdb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0272354811acc4233"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-us.aws_internet_gateway.main",
            "module.vpc-us.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8872102b5fabf5e",
            "route_table_id": "rtb-027ec6bc68a63ca51",
            "subnet_id": "subnet-0c2eed56b30b172e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-us.aws_internet_gateway.main",
            "module.vpc-us.aws_route_table.public",
            "module.vpc-us.aws_subnet.public_one",
            "module.vpc-us.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863435570010:security-group/sg-0a7125bbd4568eca7",
            "description": "Allow outbound HTTPS for SNS and ECR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Required to talk to SNS, ECR, and CloudWatch",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a7125bbd4568eca7",
            "ingress": [],
            "name": "ecs-task-sg",
            "name_prefix": "",
            "owner_id": "863435570010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-publisher-sg"
            },
            "tags_all": {
              "Name": "ecs-publisher-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0272354811acc4233"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-us.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863435570010:subnet/subnet-0c2eed56b30b172e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2eed56b30b172e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863435570010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-0272354811acc4233"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc-us.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc-us",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].US",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863435570010:vpc/vpc-0272354811acc4233",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-02f1dac295f10f89e",
            "default_route_table_id": "rtb-0af98a81689411616",
            "default_security_group_id": "sg-0597442c35d53ccf1",
            "dhcp_options_id": "dopt-01b9bc95f096470c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0272354811acc4233",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af98a81689411616",
            "owner_id": "863435570010",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}